----------
joel        Date: Wed Apr  9 14:42:02 EDT 2008  CSN: CSN-asimcore-221
                  Wed Apr  9 18:42:02 UTC 2008


Directory etc
 asim.pack                 Locally Modified          220 

Fixed some URLs.

----------
emer        Date: Wed Apr  9 21:41:18 EDT 2008  CSN: CSN-asimcore-222
                  Thu Apr 10 01:41:18 UTC 2008


Directory etc
 asim.pack                 Locally Modified          221 

Added hasim-alpha package.

----------
emer        Date: Wed Apr  9 21:53:26 EDT 2008  CSN: CSN-asimcore-223
                  Thu Apr 10 01:53:26 UTC 2008


Directory etc
 asim.pack                 Locally Modified          222 

Made checkout target directories consistent.

----------
emer        Date: Sat Apr 12 19:31:46 EDT 2008  CSN: CSN-asimcore-224
                  Sat Apr 12 23:31:46 UTC 2008


Directory etc
 asim.pack                 Locally Modified          223 

Added repository for m5.

----------
mcadler     Date: Fri Apr 25 17:56:23 EDT 2008  CSN: CSN-asimcore-225
                  Fri Apr 25 21:56:23 UTC 2008


Directory libperl/Asim/lib/Asim/Workspace
 Template.pm               Locally Modified          224 

Directory libperl/Asim/lib/Asim
 Workspace.pm              Locally Modified          224 

Directory tools/awb/awb-resolver
 awb-resolver.cpp          Locally Modified          224 

Directory lib/libawb
 workspace.cpp             Locally Modified          224 
 workspace.h               Locally Modified          224 

Add EVENTS to the awb.config and awb-resolver options processing to control
building models with support for events.  Default is off.

----------
spartha1    Date: Fri May  9 16:36:18 EDT 2008  CSN: CSN-asimcore-226
                  Fri May  9 20:36:18 UTC 2008


Directory tools/scripts
 asim-run                  Locally Modified          225 

Updating with simcore changes (rev. 2536 - Sailashri Parthasarathy)

Bug fix: Adding a command line check to check if the specified experiment and benchmark files exist.